[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/play/PlayGame.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamic/screen_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/buttons/MenuButton.tscn" type="PackedScene" id=3]

[node name="PlayGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.36035
margin_right = -1.36035
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
custom_constants/separation = 95

[node name="Title" type="Label" parent="Menu"]
margin_right = 784.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jogar"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 169.0
margin_right = 784.0
margin_bottom = 390.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 243.0
margin_right = 540.0
margin_bottom = 221.0
custom_constants/separation = 34
alignment = 1

[node name="VisionModeButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_right = 297.0
margin_bottom = 51.0
text = "Modo visão"
scene_to_load = "res://menus/play/connect/PlayVision.tscn"

[node name="HearingModeButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 85.0
margin_right = 297.0
margin_bottom = 136.0
text = "Modo audição"
scene_to_load = "res://menus/play/connect/PlayHearing.tscn"

[node name="BackButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 170.0
margin_right = 297.0
margin_bottom = 221.0
text = "Voltar"
scene_to_load = "res://menus/TitleScreen.tscn"
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/VisionModeButton" to="." method="_on_VisionModeButton_focus_entered"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/HearingModeButton" to="." method="_on_HearingModeButton_focus_entered"]
[connection signal="focus_entered" from="Menu/CenterRow/Buttons/BackButton" to="." method="_on_BackButton_focus_entered"]
